content/vault/v1.14.x/content/docs/upgrading/upgrade-to-1.14.x.mdx
---
# Copyright (c) 2024 HashiCorp, Inc.
# Vault and the Vault logo are trademarks of HashiCorp.
#
# Documentation licensed under the Business Source License, Version 1.1.
# The original work was translated from English into Brazilian Portuguese.
# https://github.com/hashicorp/vault/blob/-/LICENSE

layout: docs
page_title: Upgrade to Vault 1.14.x
description: |-
  Deprecations, important or breaking changes, and remediation recommendations
  for anyone upgrading to 1.14.x from Vault 1.13.x.
---

# Upgrade to Vault 1.14.x

The Vault 1.14.x upgrade guide contains information on deprecations, important
or breaking changes, and remediation recommendations for anyone upgrading from
Vault 1.13. **Please read carefully**.

## Feature deprecations and EOL

### Duplicative Docker images

As of Vault 1.14 we will no longer update the the `vault` Docker image.
Only the [Verified Publisher](https://hub.docker.com/r/hashicorp/vault)
`hashicorp/vault` image will be updated on DockerHub.

Users of [Official Images](https://hub.docker.com/_/vault) need to use
`docker pull hashicorp/vault:<version>` instead of `docker pull vault:<version>`
to get newer versions of Vault in Docker images. Currently, HashiCorp publishes
and updates identical Docker images of Vault as Verified Publisher and
Official images separately.

## Important changes

`vault.raft_storage.bolt.write.time` has been corrected from a summary to a counter to more accurately reflect that it
is measuring cumulative time writing, and not the distribution of individual write times.

### Application of Sentinel Role Governing Policies (RGPs) via identity groups

@include 'application-of-sentinel-rgps-via-identity-groups.mdx'

## Known issues and workarounds

@include 'known-issues/ui-pki-control-groups.mdx'

@include 'known-issues/update-primary-data-loss.mdx'

@include 'known-issues/update-primary-addrs-panic.mdx'

@include 'known-issues/ui-safari-login-screen.mdx'

@include 'known-issues/aws-static-roles.mdx'

@include 'known-issues/transit-managed-keys-panics.mdx'

@include 'known-issues/transit-managed-keys-sign-fails.mdx'

@include 'known-issues/ui-collapsed-navbar.mdx'

@include 'known-issues/user-lockout-logging.mdx'

@include 'known-issues/internal-error-namespace-missing-policy.mdx'

@include 'known-issues/ephemeral-loggers-memory-leak.mdx'

@include 'known-issues/sublogger-levels-unchanged-on-reload.mdx'

@include 'known-issues/expiration-metrics-fatal-error.mdx'

@include 'known-issues/perf-secondary-many-mounts-deadlock.mdx'

@include 'known-issues/ocsp-redirect.mdx'

@include 'known-issues/perf-standbys-revert-to-standby.mdx'
